WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
262619
Fix Clock offset bug for setPlayRate
https://bugs.webkit.org/show_bug.cgi?id=262619
Summary
Fix Clock offset bug for setPlayRate
Ahmad Saleem
Reported
2023-10-04 08:35:19 PDT
SSIA Blink Merge:
https://src.chromium.org/viewvc/blink?view=revision&revision=159814
As per 1-1 on Slack with Eric, it should be OK to merge it despite having only one call to 'setPlayRate'. Thanks!
Attachments
Add attachment
proposed patch, testcase, etc.
Ahmad Saleem
Comment 1
2023-10-04 12:18:40 PDT
PR -
https://github.com/WebKit/WebKit/pull/18623
EWS
Comment 2
2023-10-04 12:54:00 PDT
Committed
268865@main
(4f53db6c7268): <
https://commits.webkit.org/268865@main
> Reviewed commits have been landed. Closing PR #18623 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-10-04 12:54:17 PDT
<
rdar://problem/116480829
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug