Fix Clock offset bug for setPlayRate

https://bugs.webkit.org/show_bug.cgi?id=262619

Reviewed by Eric Carlson.

Merge: https://src.chromium.org/viewvc/blink?view=revision&revision=159814

Stopping and then restarting a WebCore::ClockGeneric resulted in junk values on subsequent currentTime() calls,
this caused MediaController (the only user of Clock as far as I can tell) to lose the playback position when paused.

* Source/WebCore/PAL/pal/system/ClockGeneric.cpp:
(ClockGeneric::currentTime):
(ClockGeneric::setPlayRate):
(ClockGeneric::stop):
(ClockGeneric::currentDelta):
* Source/WebCore/PAL/pal/system/ClockGeneric.h:
* LayoutTests/media/media-controller-play-then-pause.html: Add Test Case
* LayoutTests/media/media-controller-play-then-pause-expected.txt: Add Test Case Expectation

Canonical link: https://commits.webkit.org/268865@main